--- a/Game/Script/Styling/Game.css
+++ b/Game/Script/Styling/Game.css
@@ -22,7 +22,7 @@
   color: white;
   background-color: #313131;
   border-width: 0;
-  border-radius: 30px;
+  border-radius: 1.5vw;
   display: flex;
   flex-direction: column;
   margin-top: 10%;
