--- a/Game/Script/Styling/Game.css
+++ b/Game/Script/Styling/Game.css
@@ -1,10 +1,10 @@
-#hud {
+#hud_id {
     position: absolute;
     height: 100%;
     width: 100%;
 }
   
-#valuationContainer {
+#valuationContainer_id {
   width: 100%;
   height: 20%;
   position: absolute;
@@ -58,7 +58,7 @@
   background: linear-gradient(#5BB8BC, #5071A7);
 }
 
-#rollingDiv {
+#rollingDiv_id {
   width: 100%;
   height: 100%;
   display: flex;
