--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -32,4 +32,12 @@ button:active {
   filter: brightness(80%);
 }
 
+.diceCupButtons {
+  box-shadow: 0 0.5vw 0.5vw 0 rgba(0, 0, 0, 0.25);
+  border-width: 0;
+  border-radius: 2vw;
+}
 
+.diceCupButtons:active {
+  transform: scale(0.9);
+}
