--- a/Game/Script/Styling/Transitions.css
+++ b/Game/Script/Styling/Transitions.css
@@ -22,9 +22,13 @@
 }
 @keyframes waviy {
     0%,40%,100% {
-        transform: translateY(0)
+        transform: translateY(0);
+        backface-visibility: hidden;
+        will-change: transform;
     }
     20% {
-        transform: translateY(-20px)
+        transform: translateY(-20px);
+        backface-visibility: hidden;
+        will-change: transform;
     }
 }
