--- a/Game/Script/Styling/Categories.css
+++ b/Game/Script/Styling/Categories.css
@@ -68,6 +68,10 @@
     border-radius: 3vw;
 }
 
+.categoryButtons:disabled {
+    background: #202020;
+}
+
 .categoryImages {
     width: 90%;
     aspect-ratio: 1/1;
