feat: add summary and adjust everything to a complette game

--- a/Game/Script/Styling/Categories.css
+++ b/Game/Script/Styling/Categories.css
@@ -81,7 +81,7 @@
     opacity: 0.2;
 }
 
-.categoryButtons:active {
+.categoryButtons:disabled:active {
     filter: brightness(100%);
     transform: scale(1);
 }
