--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -12,9 +12,16 @@ html, body {
        -moz-user-select: none; /* Old versions of Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
 canvas.fullscreen { 
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+#DiceCup {
   height: 100%;
   width: 100%;
   position: absolute;
