feat: add placements and better menu

--- a/Game/Script/Styling/Categories.css
+++ b/Game/Script/Styling/Categories.css
@@ -91,5 +91,5 @@
     color: white;
     font-family: "Bungee";
     font-size: 4vi;
-    text-shadow: 0.1vi 0.1vi 2vi #000000;
+    text-shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
 }
