--- a/Game/Script/Styling/Menu.css
+++ b/Game/Script/Styling/Menu.css
@@ -68,13 +68,14 @@
     font-size: 5vw;
     color: white;
     font-family: "Bungee";
-    text-shadow: 0 0.5vw 0.5vw rgba(0, 0, 0, 0.25);
+    text-shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
 }
 
 #lobbyPortraits_id {
     width: 96vw;
     display: flex;
     justify-content: space-between;
+    height: 100%;
 }
 
 .lobbyPortrait {
@@ -94,10 +95,6 @@
 
 .lobbyPortrait_inactive {
     background: rgba(47, 66, 96, 0.5);
-}
-
-#lobbyPortraits_id {
-    height: 100%;
 }
 
 .lobbyPortraitIcons {
