feat: finish placements and add zindex to menu

--- a/Game/Script/Styling/Placements.css
+++ b/Game/Script/Styling/Placements.css
@@ -25,10 +25,10 @@
     text-shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
 }
 
-#placementPortraits_id {
+#placementsPortraits_id {
     width: 96vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     height: 100%;
 }
 
@@ -48,14 +48,14 @@
 }
 
 .placementsContainer {
-    height: 23vw;
+    max-height: 23vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
-.placementNames {
+.placementsNames {
     width: 11vw;
     border-width: 0;
     aspect-ratio: 1/0.25;
@@ -64,18 +64,67 @@
     color: white;
     text-align: center;
     font-size: 2vi;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-family: "Inter";
     box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.placementOrder {
-    font-size: 3vi;
-    font-family: 'Inter';
+.placementsPoints {
+    width: 6vw;
+    border-width: 0;
+    border-radius: 3vh;
+    background: #ffffff;
+    color: #3E5373;
+    text-align: center;
+    font-size: 2vi;
+    font-family: "Inter";
+    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.placementsOrder {
+    position: absolute;
+    width: 2.5vw;
+    aspect-ratio: 1/1;
+    background: #2F4260;
+    right: 0;
+    top: 0;
+    margin-right: -0.8vw;
+    margin-top: -0.8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8vi;
+    font-family: "Bungee";
     color: white;
+    overflow: hidden;
+    border-radius: 100%;
+    border-width: 1vh;
+    border-style: double;
+    border-color: #1a2638;
+}
+
+#placementsOrder_id_0 {
+    background: #EDD500;
+    border-color: #6d6200;
+    color: #6d6200;
+}
+
+#placementsOrder_id_1 {
+    background: #F2F2F2;
+    border-color: #919191;
+    color: #919191;
+}
+
+#placementsOrder_id_2 {
+    background: #c58f3d;
+    border-color: #64461a;
+    color: #64461a;
 }
 
 #placementsBottomArea_id {
@@ -93,11 +142,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: #2F4260;
+    background: #2A3546;
     color: white;
 }
 
-#placementPhrase_id {
+#placementsPhrase_id {
     font-size: 3vi;
     font-family: "Bungee";
     text-shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
