--- a/Game/Script/Styling/Menu.css
+++ b/Game/Script/Styling/Menu.css
@@ -119,7 +119,7 @@
     color: white;
     text-align: center;
     font-size: 2vi;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Inter";
     font-weight: bold;
     box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
 }
