--- a/Game/Script/Styling/Components/Categories.css
+++ b/Game/Script/Styling/Components/Categories.css
@@ -1,22 +1,22 @@
 #categoryBackground_id {
-    position: absolute;
     width: 100%;
     height: 100%;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #categoryContainer_id {
-    position: absolute;
     width: calc(100vw - 5vh);
     height: calc(100vh - 5vh);
-    background-color: #313131;
-    border-radius: 1.5vw;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 1.5vw;
+    background: var(--category_background);
 }
 
 .categoriesHidden {
@@ -32,44 +32,44 @@
 #categoryHeader_id {
     height: 25%;
     width: 100%;
-    background: #36417E;
-    box-shadow: 0 0.5vw 0.5vw 0 rgba(0, 0, 0, 0.25);
     border-radius: 1.5vw 1.5vw 0 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background: var(--category_header);
+    box-shadow: var(--box_shadow);
 }
 
 #categoryTitle_id {
     padding-left: 3%;
-    color: white;
-    font-family: "Bungee";
-    font-size: 5vi;
+    color: var(--category_title_fontcolor);
+    font-size: var(--category_title_fontsize);
+    font-family: var(--main_font);
 }
 
 #categoryContent_id {
     height: 75%;
     width: 95%;
     display: grid;
-    grid-template-columns: repeat(6, calc(100%/6));
     justify-items: center;
     align-items: center;
+    grid-template-columns: repeat(6, calc(100%/6));
 }
 
 .categoryButtons {
-    position: relative;
     width: 80%;
     aspect-ratio: 1/1;
-    background: #4A4A4A;
-    box-shadow: 0 0.5vw 0.5vw 0 rgba(0, 0, 0, 0.25);
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 3vw;
+    background: var(--category_buttons);
+    box-shadow: var(--box_shadow);
 }
 
 .categoryButtons:disabled {
-    background: #202020;
+    background: var(--category_buttons_disabled);
 }
 
 .categoryImages {
@@ -88,8 +88,8 @@
 
 .categoryPoints {
     position: absolute;
-    color: white;
-    font-family: "Bungee";
-    font-size: 4vi;
-    text-shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
+    font-family: var(--main_font);
+    text-shadow: var(--text_shadow);
+    color: var(--category_points_fontcolor);
+    font-size: var(--category_points_fontsize);
 }
