--- a/Game/Script/Styling/Components/Hud.css
+++ b/Game/Script/Styling/Components/Hud.css
@@ -1,14 +1,14 @@
 #hud_id {
-    position: absolute;
-    height: 100%;
-    width: 100%;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
   
 #valuationContainer_id {
   width: 100%;
   height: 20%;
-  position: absolute;
   bottom: -10%;
+  position: absolute;
   display: flex;
   justify-content: space-around;
   overflow: hidden;
@@ -17,10 +17,10 @@
 .valuation {
   width: 5%;
   height: 100%;
-  background-color: #313131;
   border-radius: 1.5vw;
   display: flex;
   flex-direction: column;
+  background-color: var(--hud_background);
 }
 
 .valuationHidden {
