--- a/Game/Script/Styling/Components/Transitions.css
+++ b/Game/Script/Styling/Components/Transitions.css
@@ -1,27 +1,27 @@
 .startTransitionContainer {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
-    font-size: 10vw;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    word-spacing: 3vw;
-    background: linear-gradient(#5BB8BC, #5071A7);
+    width: 100%;
+    height: 100%;
     z-index: 10;
+    background: var(--background_fade);
+    word-spacing: var(--transition_text_wordspacing);
+    font-size: var(--transition_text_fontsize);
+    color: var(--transition_text_color);
+    font-family: var(--main_font);
 }
   
 .startTransitionContainer span {
-    font-family: "Bungee";
     position: relative;
     display: inline-block;
-    color: #fff;
     text-transform: uppercase;
     animation: waviy 1s infinite;
     animation-delay: calc(.1s * var(--i));
-
 }
+
 @keyframes waviy {
     0%,40%,100% {
         transform: translateY(0);
